# DICE-TCB-layer-simulator

./: CMakeLists.txt  README.md  dice-implementation-summary.md
docs/: cpp_concepts.md  dice_operation.md
src/: chain_verifier.hpp  dice_engine.hpp  dice_layer.hpp  ed25519.hpp  hkdf.hpp  hmac_sha256.hpp  main.cpp  secure_buf.hpp  sha256.hpp  simple_cert.hpp  uds.hpp
src/tests/: CMakeLists.txt  chain_verifier_test.cpp  dice_engine_test.cpp  dice_integration_test.cpp  dice_layer_test.cpp  ed25519_test.cpp  hkdf_test.cpp  hmac_sha256_test.cpp  secure_buf_test.cpp  sha256_test.cpp  simple_cert_test.cpp  test_start.sh  uds_gen_test.cpp
